--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="">
     <title>SignIn</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
     <p id="pass2Err">Password2 is required</p>
     <input class="button" type="submit" id="submit" value="Submit">
 </div>
-
+<p id="da">milion dolars</p>
 
 
 <script src="./reg_valid.js"></script>    
