--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <div id="form-dev">
     <h2>Register With Us</h2>
         <label for="username">Username</label><br>
-        <input class="regform" type="text" name="username" id="username" placeholder="Enter username" value="pula"><br>
-        <p class="error" id="usernameErr"></p>
+        <input class="regform" type="text" name="username" id="username" placeholder="Enter username" value=""><br>
+        <p class="error" id="usernameErr" data-tooltip="Всплывающая подсказка">пппппп</p>
         <label for="e-mail">Email</label><br>
-        <input class="regform" type="email" id="e-mail" placeholder="Enter email"><br>
-        <p class="error" id="emailErr">Email is not valid</p>
+        <input class="regform" type="email" id="e-mail" placeholder="Enter email" value=""><br>
+        <p class="error" id="emailErr"></p>
         <label for="pswdmain">Password</label><br>
         <input class="regform" type="password" id="pswdmain" placeholder="Enter password"><br>
         <p class="error" id="passErr">Password must be at least 6 characters</p>
@@ -31,6 +31,6 @@
 </div>
 
 
-<script src="./reg_valid.js"></script>    
+<script src="./regvalidation.js"></script>    
 </body>
 </html>
