--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 <body>
 <div id="form-dev">
     <h2>Register With Us</h2>
+   
         <label for="username">Username</label><br>
-        <input class="regform" type="text" name="username" id="username" placeholder="Enter username" value=""><br>
-        <p class="error" id="usernameErr" data-tooltip="Всплывающая подсказка">пппппп</p>
+        <input class="regform" type="text" name="username" id="username" placeholder="Username" value=""><br>
+        <p class="error" id="usernameErr"></p>
         <label for="e-mail">Email</label><br>
-        <input class="regform" type="email" id="e-mail" placeholder="Enter email" value=""><br>
+        <input class="regform" type="email" id="e-mail" placeholder="Email" value=""><br>
         <p class="error" id="emailErr"></p>
         <label for="pswdmain">Password</label><br>
-        <input class="regform" type="password" id="pswdmain" placeholder="Enter password"><br>
+        <input class="regform" type="password" id="pswdmain" placeholder="id: pswdmain"><br>
         <p class="error" id="passErr">Password must be at least 6 characters</p>
         <label for="pswdsec">Confirm Password</label><br>
-        <input class="regform" type="password" id="pswdsec" placeholder="Enter password again"><br>
+        <input class="regform" type="password" id="pswdsec" placeholder="id: pswdsec"><br>
         <p class="error" id="pass2Err">Password2 is required</p>
         <input class="button" type="submit" id="submit" value="Submit">
+    
 </div>
 
 <div>
