--- a/index.html
+++ b/index.html
@@ -12,27 +12,21 @@
 <div id="form-dev">
     <h2>Register With Us</h2>
    
-        <label for="username">Username</label><br>
-        <input class="regform" type="text" name="username" id="username" placeholder="Username" value=""><br>
+        <label for="username">Username</label>
+        <input class="regform" type="text" name="username" id="username" placeholder="Username">
         <p class="error" id="usernameErr"></p>
-        <label for="e-mail">Email</label><br>
-        <input class="regform" type="email" id="e-mail" placeholder="Email" value=""><br>
+        <label for="e-mail">Email</label>
+        <input class="regform" type="email" id="e-mail" placeholder="Email">
         <p class="error" id="emailErr"></p>
-        <label for="pswdmain">Password</label><br>
-        <input class="regform" type="password" id="pswdmain" placeholder="id: pswdmain"><br>
-        <p class="error" id="passErr">Password must be at least 6 characters</p>
-        <label for="pswdsec">Confirm Password</label><br>
-        <input class="regform" type="password" id="pswdsec" placeholder="id: pswdsec"><br>
-        <p class="error" id="pass2Err">Password2 is required</p>
+        <label for="pswdmain">Password</label>
+        <input class="regform" type="password" id="pswdmain" placeholder="Enter password">
+        <p class="error" id="passErr"></p>
+        <label for="pswdsec">Confirm Password</label>
+        <input class="regform" type="password" id="pswdsec" placeholder="Enter password again">
+        <p class="error" id="pass2Err"></p>
         <input class="button" type="submit" id="submit" value="Submit">
     
 </div>
-
-<div>
-<p id="da">milion dolars</p>
-</div>
-
-
 <script src="./regvalidation.js"></script>    
 </body>
 </html>
